2012-02-09  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents/incident.php: Fixed the files tab
	enabling problem

2012-02-09 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* godmode/usuarios/configurar_usuarios.php: Fixed a problem that prevent
	the user creation.

2012-02-09 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_graph.php,
	include/functions_incidents.php,
	include/functions_db.php: Fixed SLA compliance inside incident general
	statistics and added a pie graph.

2012-02-08  Sancho Lerena <slerena@artica.es>

	* integria_demo.sql: Fixed SQL.

	* operation/companies/company_detail.php: Fixed sorting of 
	company listing.

2012-02-08  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents_simple/incident.files.php
	operation/incidents_simple/incident.details.php
	operation/incidents_simple/incident.workunits.php: Added 
	incident details under first workunit and add some error
	messages into the simple incident view

2012-02-08  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents_simple/incidents.php
	operation/incidents_simple/incident_new.php: Added 
	soft and hard limit to the simple incidents creation

2012-02-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_incidents.php: Added to the
	mail templates the company of the users

	* operation/incidents_simple/incident.php
	operation/incidents_simple/incidents.php: Change some
	error/success messages from <h3> tags to print_message
	function

	* general/home.php: Fixed home direct link to
	incidents

2012-02-07  Sergio Martin <sergio.martin@artica.es>

	* include/js/integria_incident_search.js: Fixed auto
	update tab bugs on the incidents view when create
	a workunit

2012-02-07  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents_simple/incidents.php: Added search
	filter in the simple incident list

2012-02-07  Sergio Martin <sergio.martin@artica.es>

	* include/js/integria.js
	include/functions_ui.php