@@ -58,11 +58,19 @@ form{display:inline}
 
 #contentTextarea{height:44em}
 
-#toc{margin:5px 0 5px 10px;padding:6px 5px 7px 0px;float:right;list-style:none;outline:0.4em solid #eee;background:#fef4a4;border:1px solid #e0d78a}
+#toc{
+	margin:5px 0 5px 5px;
+	padding:6px 5px 7px 0px;
+	float:right;
+	list-style:none;
+	outline:0.1em solid #eee;
+	background:#fef4a4;
+	border:1px solid #e0d78a
+}
 
-#toc ul{list-style:none;padding:3px 0 3px 10px}
+#toc ul{list-style:none;padding:3px 0 3px 1px}
 
-#toc li{font-size:11px;padding-left:10px}
+#toc li{font-size:11px;padding-left:4px}
 
 .rc-diff, .rc-date, .rc-ip, .rc-size {font-size: smaller}
 
